--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
@@ -1,49 +1,37 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" >
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="row">
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
-                            <input
-                                type="text"
-                                id="cpf"
-                                class="form-control inverted-out input-style label-personalized"
-                                mask="000.000.000-00"
-                                (change)="validarCpf()"
-                                formControlName="cpf"
+                            <input type="text" id="cpf" class="form-control inverted-out input-style label-personalized"
+                                mask="000.000.000-00" (change)="validarCpf()" formControlName="cpf"
                                 [ngClass]="applyCssInputError('cpf')" placeholder=" " [dropSpecialCharacters]="false"
-                                inputmode="numeric"
-                                [readonly]="faceMatchRequested"
-                            >
+                                inputmode="numeric" [readonly]="faceMatchRequested">
                             <label for="cpf" class="text-input">{{'geral.cpf' | translate}}</label>
                         </div>
-
                         <app-error-msg [control]="form.get('cpf')" label="CPF" class="text-left"></app-error-msg>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12" [hidden]="(autoPreenchimento && !cpfValidado) || (!autoPreenchimento && formSocial) || (validarBeneficioProgramaSocial && !cpfValidado)">
+                <div class="col-md-12"
+                    [hidden]="(autoPreenchimento && !cpfValidado) || (!autoPreenchimento && formSocial) || (validarBeneficioProgramaSocial && !cpfValidado)">
                     <div class="form-group mb-4">
                         <div class="input-md">
-                            <input
-                                type="text"
-                                id="nome"
-                                class="form-control inverted-out input-style"
-                                (blur)="onBlurGa4Name($event)"
-                                (beforeinput)="onBeforeInput($event, 'name')"
-                                formControlName="nome"
-                                [ngClass]="applyCssInputError('nome')"
-                                placeholder=" "
-                                [readonly]="autoPreenchimento || validarBeneficioProgramaSocial"
-                            >
+                            <input type="text" id="nome" class="form-control inverted-out input-style"
+                                (blur)="onBlurGa4Name($event)" (beforeinput)="onBeforeInput($event, 'name')"
+                                formControlName="nome" [ngClass]="applyCssInputError('nome')" placeholder=" "
+                                [readonly]="autoPreenchimento || validarBeneficioProgramaSocial">
                             <label for="nome" class="text-input">{{'geral.nomeCompleto' | translate}}</label>
                         </div>
-                        <app-error-msg [control]="form.get('nome')" label="{{'geral.nome' | translate}}" class="text-left"></app-error-msg>
+                        <app-error-msg [control]="form.get('nome')" label="{{'geral.nome' | translate}}"
+                            class="text-left"></app-error-msg>
                     </div>
                 </div>
-                <input type="hidden" id="nomeCompleto" [value]="form.get('nome')" formControlName="nomeCompleto" class="label-personalized">
+                <input type="hidden" id="nomeCompleto" [value]="form.get('nome')" formControlName="nomeCompleto"
+                    class="label-personalized">
             </div>
             <div class="row" *ngIf="!autoPreenchimento">
                 <div class="col-md-12">
@@ -56,7 +44,9 @@
                                 <div class="group-date-of-birth">
                                     <div class="select-date-of-birth">
                                         <div class="division-date-of-birth">
-                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial" class="form-control style-select" formControlName="day"  (change)="onDateChange()">
+                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial"
+                                                class="form-control style-select" formControlName="day"
+                                                (change)="onDateChange()">
                                                 <option value="dia">{{'register.day' | translate}}</option>
                                                 <option *ngFor="let day of days" [value]="day">{{ day }}</option>
                                             </select>
@@ -64,15 +54,20 @@
                                     </div>
                                     <div class="select-date-of-birth">
                                         <div class="division-date-of-birth">
-                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial" class="form-control style-select" formControlName="month"  (change)="onDateChange()">
+                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial"
+                                                class="form-control style-select" formControlName="month"
+                                                (change)="onDateChange()">
                                                 <option value="mes">{{'register.month' | translate}}</option>
-                                                <option *ngFor="let month of months" [value]="month.value">{{ month.name }}</option>
+                                                <option *ngFor="let month of months" [value]="month.value">{{ month.name
+                                                    }}</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="select-date-of-birth">
                                         <div class="division-date-of-birth">
-                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial" class="form-control style-select" formControlName="year"  (change)="onDateChange()">
+                                            <select [disabled]="autoPreenchimento || validarBeneficioProgramaSocial"
+                                                class="form-control style-select" formControlName="year"
+                                                (change)="onDateChange()">
                                                 <option value="ano">{{'register.year' | translate}}</option>
                                                 <option *ngFor="let year of years" [value]="year">{{ year }}</option>
                                             </select>
@@ -97,7 +92,8 @@
                                         <div class="select-nationality">
                                             <select class="form-control style-select" formControlName="nationality">
                                                 <option selected [value]="26">{{'register.brasil' | translate}}</option>
-                                                <option *ngFor="let nationality of nationalities" [value]="nationality.value">{{ nationality.name }}</option>
+                                                <option *ngFor="let nationality of nationalities"
+                                                    [value]="nationality.value">{{ nationality.name }}</option>
                                             </select>
                                         </div>
                                     </div>
@@ -120,7 +116,7 @@
                                         <div>
                                             <div class="div-button-gender">
                                                 <div class="custom-radio">
-                                                    <input type="radio" formControlName="gender" value="masculino">   
+                                                    <input type="radio" formControlName="gender" value="masculino">
                                                     <span class="radio-custom"></span>
                                                 </div>
                                                 <div>
