--- a/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.html
@@ -10,7 +10,6 @@
     <div class="stepper" [ngClass]="currentIndex != 0 ? 'active': 'deactived'">
         <div class="circle">
             <span *ngIf="currentIndex <= 1 else done" class="circle-number">2</span>
-           
         </div>
         <div>
             <span class="circle-text">{{"geral.endereco" | translate}}</span>
@@ -26,9 +25,10 @@
     </div>
     <ng-template #done>
         <span class="circle-number">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9" >
-                <path d="M4.28584 9.00006L0.48584 5.20007L1.43584 4.25007L4.28584 7.10006L10.4025 0.983398L11.3525 1.9334L4.28584 9.00006Z" />
-              </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9">
+                <path
+                    d="M4.28584 9.00006L0.48584 5.20007L1.43584 4.25007L4.28584 7.10006L10.4025 0.983398L11.3525 1.9334L4.28584 9.00006Z" />
+            </svg>
         </span>
     </ng-template>
 </div>
