fix: to hide the TOOLTIP when there is no option to check strong password in the CENTRAL

--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
@@ -49,7 +49,7 @@
                         class="form-control inverted-out input-style label-personalized"
                         [ngClass]="applyCssInputError('senha')" formControlName="senha" placeholder=" "
                         (beforeinput)="onBeforeInput($event, 'password')"
-                        (input)="isStrengthPassword ? checkPassword() : null" [ngbTooltip]="tooltipTemplate"
+                        (input)="isStrengthPassword ? checkPassword() : null" [ngbTooltip]="tooltipTemplate" [disableTooltip]="!isStrengthPassword"
                         placement="bottom" tooltipClass="tooltip-password">
                     <label class="text-input" for="password">{{'geral.senha' | translate}}</label>
                     <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'"
