--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -145,7 +145,9 @@
                                             <div class="min-amount">
                                                 <i class="fa-solid fa-circle-exclamation"></i>&nbsp;
                                                 {{'saques.minimumWithdrawal' | translate}}: {{valorMinSaque | currency}}
-                                                / {{'saques.maximumWithdrawalAmount' | translate}}: {{maximumWithdrawalAmount | currency}}
+                                                <span *ngIf="maximumWithdrawalAmount > 0">
+                                                    / {{'saques.maximumWithdrawalAmount' | translate}}: {{maximumWithdrawalAmount | currency}}
+                                                </span>
                                                 / {{'saques.dailyMaximum' | translate}}: {{valorMaxSaqueDiario | currency}}
                                                 / {{'saques.monthlyMaximum' | translate}}: {{valorMaxSaqueMensal | currency}}
                                             </div>
