--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -37,113 +37,127 @@
     </ng-container>
 
     <ng-template #elseCasinoPage>
-        <app-banners pagina="cassino"></app-banners>
+        <!---->
+        <ng-container *ngFor="let widget of widgets">
+            <ng-container [ngSwitch]="widget.type">
+                <app-banners pagina="cassino" *ngSwitchCase="'banners'"></app-banners>
 
-        <div class="bloco filters" *ngIf="showFilterBox">
-            <app-wall-games-search
-                [games]="gamesCassino"
-                [featuredGames]="gamesDestaque"
-                [providers]="cassinoFornecedores"
-                [isCliente]="isCliente"
-                [isLoggedIn]="isLoggedIn"
+                <ng-container *ngSwitchCase="'search'">
+                    <div class="bloco filters" *ngIf="showFilterBox">
+                        <app-wall-games-search
+                            [games]="gamesCassino"
+                            [featuredGames]="gamesDestaque"
+                            [providers]="cassinoFornecedores"
+                            [isCliente]="isCliente"
+                            [isLoggedIn]="isLoggedIn"
 
-                (onFilterGames)="filterGames($event, categorySelected, true)"
-            />
+                            (onFilterGames)="filterGames($event, categorySelected, true)"
+                        />
+                    </div>
+                </ng-container>
 
-            <app-submenu
-                [category]="subMenuCategory"
-                version="v2"
-                [menuItemSelected]="categorySelected"
-                (onClick)="filterGames(gameFornecedor, $event, false)"
-            />
-        </div>
+                <ng-container *ngSwitchCase="'tags'">
+                    <div class="bloco filters" *ngIf="showFilterBox">
+                        <app-submenu
+                            [category]="subMenuCategory"
+                            version="v2"
+                            [menuItemSelected]="categorySelected"
+                            (onClick)="filterGames(gameFornecedor, $event, false)"
+                        />
+                    </div>
+                </ng-container>
 
-        <div class="wall-inner" *ngIf="isHomeCassino; else cassinoGameList">
-            <ng-container *ngFor="let section of gamesSection">
-                <div class="bloco blocoGameList" *ngIf="section.show">
-                    <app-wall-section
-                        [container]="listagem"
-                        [sectionId]="section.id"
-                        [title]="section.title"
-                        [itemsQty]="section.gameList.length"
-                        (onSeeAll)="filterGames($event, section.id, true)"
-                        (onLeft)="scrollLeft(section.id)"
-                        (onRight)="scrollRight(section.id)"
-                    />
+                <ng-container *ngIf="isHomeCassino; else cassinoGameList">
+                    <div class="wall-inner" *ngSwitchCase="'casino'">
+                        <div class="bloco blocoGameList">
+                            <app-wall-section
+                                [container]="listagem"
+                                [sectionId]="widget.id"
+                                [title]="widget.name"
+                                [itemsQty]="widget.items.length"
+                                (onSeeAll)="filterGames($event, widget.id, true)"
+                                (onLeft)="scrollLeft(widget.id)"
+                                (onRight)="scrollRight(widget.id)"
+                            />
 
-                    <div class="games-container">
-                        <ng-container *ngIf="section.gameList.length; else elseWithoutGames">
-                            <div class="game-list game-list-inline" #scrollGames id="{{ section.id }}-scroll" (scroll)="onScroll(section.id)">
+                            <div class="games-container">
+                                <ng-container *ngIf="widget.items.length; else elseWithoutGames">
+                                    <div class="game-list game-list-inline" #scrollGames id="{{ widget.id }}-scroll" (scroll)="onScroll(widget.id)">
+                                        <app-wall-game-card
+                                            *ngFor="let game of widget.items"
+                                            [game]="game"
+                                            [blink]="blink"
+                                            [isLoggedIn]="isLoggedIn"
+                                            [isDemo]="isDemo"
+                                            [isCliente]="isCliente"
+                                            [icon]="widget.icon"
+                                            cardType="inline"
+
+                                        />
+                                    </div>
+                                </ng-container>
+                                <ng-template #elseWithoutGames>
+                                    <span class="empty-game-list">{{ 'geral.nenhumJogoDisponivel' | translate }}</span>
+                                </ng-template>
+                            </div>
+                        </div>
+                    </div>
+                </ng-container>
+
+                <ng-template #cassinoGameList>
+                    <ng-container *ngSwitchCase="'result_filter'">
+                        <div class="bloco">
+                            <div class="titulo" *ngIf="gameList && gameList.length">
+                                <app-back-page
+                                    [text]="gameTitle | titlecase"
+                                    [category]="categorySelected"
+                                    [provider]="gameFornecedor"
+                                ></app-back-page>
+                            </div>
+                            <div class="sem-evento empty-game-list" *ngIf="gameList && !gameList.length">
+                                {{'geral.nenhumJogoEncontrado' | translate}}!
+                            </div>
+                            <div class="game-grid">
                                 <app-wall-game-card
-                                    *ngFor="let game of section.gameList"
+                                    *ngFor="let game of gameList | paginate: { itemsPerPage: qtdItens, currentPage: 1 }"
                                     [game]="game"
                                     [blink]="blink"
                                     [isLoggedIn]="isLoggedIn"
                                     [isDemo]="isDemo"
                                     [isCliente]="isCliente"
-                                    cardType="inline"
-
                                 />
                             </div>
-                        </ng-container>
-                        <ng-template #elseWithoutGames>
-                            <span class="empty-game-list">{{ 'geral.nenhumJogoDisponivel' | translate }}</span>
-                        </ng-template>
+                        </div>
+                    </ng-container>
+                </ng-template>
+
+                <ng-container *ngSwitchCase="'providers'">
+                    <div class="bloco" *ngIf="!this.hideProviders">
+                        <app-wall-section
+                            sectionId="providers"
+                            [title]="'geral.provedores' | translate"
+                            [itemsQty]="cassinoFornecedores.length"
+                            (onSeeAll)="openFiltroFornecedores()"
+                            (onLeft)="scrollLeft('providers')"
+                            (onRight)="scrollRight('providers')"
+                        />
+
+                        <div class="provider-container">
+                            <div class="provider-list provider-list-inline" #scrollGames id="providers-scroll" (scroll)="onScroll('providers')">
+                                <app-wall-provider-card
+                                    [container]="listagem"
+                                    *ngFor="let fornecedor of cassinoFornecedores"
+                                    [data]="fornecedor"
+                                    [selected]="gameFornecedor == fornecedor.gameFornecedor"
+                                    (onClick)="filterGames($event, categorySelected, true)"
+                                />
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </ng-container>
             </ng-container>
-        </div>
-
-        <div class="bloco" *ngIf="!this.hideProviders">
-            <app-wall-section
-                sectionId="providers"
-                [title]="'geral.provedores' | translate"
-                [itemsQty]="cassinoFornecedores.length"
-                (onSeeAll)="openFiltroFornecedores()"
-                (onLeft)="scrollLeft('providers')"
-                (onRight)="scrollRight('providers')"
-            />
-
-            <div class="provider-container">
-                <div class="provider-list provider-list-inline" #scrollGames id="providers-scroll" (scroll)="onScroll('providers')">
-                    <app-wall-provider-card
-                        [container]="listagem"
-                        *ngFor="let fornecedor of cassinoFornecedores"
-                        [data]="fornecedor"
-                        [selected]="gameFornecedor == fornecedor.gameFornecedor"
-                        (onClick)="filterGames($event, categorySelected, true)"
-                    />
-                </div>
-            </div>
-        </div>
-
+        </ng-container>
 
         <app-footer [container]="listagem"></app-footer>
-
-        <ng-template #cassinoGameList>
-            <div class="bloco">
-                <div class="titulo" *ngIf="gameList && gameList.length">
-                    <app-back-page 
-                        [text]="gameTitle | titlecase"
-                        [category]="categorySelected"
-                        [provider]="gameFornecedor"
-                    ></app-back-page>
-                </div>
-                <div class="sem-evento empty-game-list" *ngIf="gameList && !gameList.length">
-                    {{'geral.nenhumJogoEncontrado' | translate}}!
-                </div>
-                <div class="game-grid">
-                    <app-wall-game-card
-                        *ngFor="let game of gameList | paginate: { itemsPerPage: qtdItens, currentPage: 1 }"
-                        [game]="game"
-                        [blink]="blink"
-                        [isLoggedIn]="isLoggedIn"
-                        [isDemo]="isDemo"
-                        [isCliente]="isCliente"
-
-                    />
-                </div>
-            </div>
-        </ng-template>
     </ng-template>
 </div>
