--- a/src/app/home/widgets/cassino/cassino.component.css
+++ b/src/app/home/widgets/cassino/cassino.component.css
@@ -1,6 +1,6 @@
 .bloco {
     position: relative;
-    padding: 0 10px 24px;
+    padding: 14px 10px 10px;
     margin: 0 auto;
     flex: 1;
     width: 100%;
