--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -62,6 +62,10 @@
     gap: 21px;
 }
 
+.container{
+    min-height: 100svh;
+}
+
 @media only screen and (min-width: 1025px) {
     .container {
         min-height: 572px;
