Fix: Problem with Register Facematch blocking

--- a/src/app/shared/layout/modals/register-face-match/register-face-match.component.css
+++ b/src/app/shared/layout/modals/register-face-match/register-face-match.component.css
@@ -33,7 +33,7 @@ p {
    color: rgba(var(--foreground-rgb), 0.7);
 }
 
-#legitimuz {
+#legitimuz, #docCheck {
     display: flex;
     flex-direction: column;
     padding: 20px;
