--- a/src/app/shared/layout/modals/register-face-match/register-face-match.component.html
+++ b/src/app/shared/layout/modals/register-face-match/register-face-match.component.html
@@ -40,7 +40,7 @@
             <div #legitimuz id="legitimuz-container">
                 <div id="legitimuz">
                     <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
-                        [value]="user.cpf" />
+                        [value]="dataUserCPF" />
                     <button id="legitimuz-action-verify" class="btn btn-custom">
                         <i class="fa-solid fa-id-card"></i>
                         {{'botoes.continue' | translate}}
@@ -51,7 +51,7 @@
         </div>
         <div style="width: 100%;" *ngIf="faceMatchType == 'docCheck' && faceMatchEnabled">
             <div #docCheck id="docCheck">
-                <button id="exDocCheckAction" *ngIf="!disapprovedIdentity"
+                <button id="exDocCheckAction"
                     [attr.data-ex-doccheck-document]="dataUserCPF"
                     [attr.data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom"
                     [attr.data-ex-doccheck-force-enrollment]="false">
