--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -72,3 +72,178 @@
         padding: 0 33px;
     }
 }
+
+.modal-body-custom {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.modal-footer-he {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100%;
+}
+
+h3 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+
+.modal-dialog {
+    max-width: 600px;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-header {
+    border-bottom-color: var(--foreground);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.btn-close {
+    margin-right: 10px;
+    background: none;
+}
+
+.close-modal-ativacao{
+    border-radius: 100%;
+    position: absolute;
+    display: flex;
+    top: 4px;
+    right: 5px;
+    cursor: pointer;
+    padding-top: 3px;
+    padding-right: 5px;
+}
+
+.close-modal-ativacao i{
+    margin: 10px;
+    color: var(--highlight);
+    font-size: 22px;
+}
+
+.modal-body {
+    padding: 16px 60px;
+}
+
+.logo {
+    max-width: 175px;
+    max-height: 140px;
+}
+
+button {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.space-buttons {
+    display: block;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.text-line {
+    height: 1px;
+    margin: 30px 0;
+    background-color: var(--foreground);
+    text-align: center;
+}
+
+.text-line span {
+    background-color: var(--background);
+    position: relative;
+    top: -0.65em;
+    padding: 0 10px;
+}
+
+.text-muted {
+    color: var(--foreground) !important;
+    opacity: 65%;
+}
+
+.content-modal-ativacao{
+    display: flex;
+    flex-direction: column;
+    margin: 25px;
+    text-align: center;
+}
+
+.content-modal-ativacao img{
+    width: 100px;
+    height: auto;
+    align-self: center;
+    margin: 20px
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: var(--background);
+    padding: 20px;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 450px;
+    text-align: center;
+}
+
+.modal-title {
+    color: #ffff;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+
+.modal-body-custom {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.modal-footer-he {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100%;
+}
+
+.btn-cancel {
+    background-color: transparent;
+    margin-top: 5px;
+    color: rgba(255, 255, 255, 0.5);
+    border: none;
+    margin-top: 20px;
+    width: 80%;
+}
+
