adjust: setting the stored value when no value is set in the configuration field

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -145,7 +145,7 @@
                                             <div class="min-amount">
                                                 <i class="fa-solid fa-circle-exclamation"></i>&nbsp;
                                                 {{'saques.minimumWithdrawal' | translate}}: {{valorMinSaque | currency}}
-                                                <span *ngIf="maximumWithdrawalAmount !== null && maximumWithdrawalAmount > 0">
+                                                <span *ngIf="maximumWithdrawalAmount !== null">
                                                     / {{'saques.maximumWithdrawalAmount' | translate}}: {{maximumWithdrawalAmount | currency}}
                                                 </span>
                                                 / {{'saques.dailyMaximum' | translate}}: {{valorMaxSaqueDiario | currency}}
