adjust: adjust the validation in the field to make the deposit

--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -63,7 +63,7 @@
                             <app-error-msg [control]="form.get('valor')"></app-error-msg>
                             <div class="min-amount">
                                 {{'deposito.valorMinimo' | translate}} {{ valorMinDeposito | currency }}
-                                <span *ngIf="maximumDepositAmount > 0">
+                                <span *ngIf="maximumDepositAmount !== ''">
                                     / {{'deposito.maximumDepositAmount' | translate}} {{ maximumDepositAmount | currency }}
                                 </span>
                             </div>
