--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,7 @@
                 class="widgets"
                 linkAll="/casino"
                 [title]="widget.name"
+                [icon]="widget.icon"
                 [games]="getGameIds(widget.items)"
                 [showLoginModal]="false"
                 [showLoadingIndicator]="false"
@@ -26,6 +27,7 @@
                     *ngIf="!betby"
                     class="widgets"
                     [title]="widget.name"
+                    [icon]="widget.icon"
                     [games]="getGameIds(widget.items)"
                     (hasFeaturedMatches)="changeDisplayFeaturedMatches($event)"
                     [isHome]="true"
