--- a/src/app/home/widgets/cassino/cassino.component.html
+++ b/src/app/home/widgets/cassino/cassino.component.html
@@ -6,6 +6,7 @@
         <app-wall-section
             sectionId="cassino"
             [title]="customCasinoName"
+            [icon]="icon"
             [itemsQty]="gameList.length"
             [seeAllRouterLink]="linkAll"
             (onLeft)="scrollLeft('cassino')"
