--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -29,6 +29,7 @@ owl-carousel-o {
     font-size: 18px;
     color: var(--foreground-header);
     flex-grow: 1;
+    gap: 5px;
 }
 
 .slider-header nav {
