--- a/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
@@ -22,7 +22,7 @@
                                 class="form-control inverted-out input-style label-personalized"
                                 formControlName="logradouro" [ngClass]="applyCssInputError('logradouro')" placeholder=""
                                 inputmode="text">
-                            <label for="logradouro" class="text-input">{{'geral.logradouro' | translate}}</label>
+                            <label for="logradouro" class="text-input">{{'geral.endereco' | translate}}</label>
                         </div>
                         <app-error-msg [control]="form.get('logradouro')" label="Endereço"
                             class="text-left"></app-error-msg>
@@ -73,12 +73,11 @@
                         </div>
                         <select formControlName="estado" type="text" class="form-control style-select"
                             (change)="getCidades($event)">
-                            <option value="">{{'geral.selecione' | translate}}</option>
-                            <option *ngFor="let estado of estados" [value]="estado.id">{{estado.nome}}
+                            <option *ngFor="let estado of estados" [value]="estado.id">{{estado.uf}}
                             </option>
                         </select>
                     </div>
-                    <app-error-msg [control]="form.get('estado')" label="estado" class="text-left"></app-error-msg>
+                    <app-error-msg [control]="form.get('estado')" label="Estado" class="text-left"></app-error-msg>
                 </div>
                 <div class="form-group mb-4 col-md-8">
                     <div class="input-md div-button-personalized input-style">
@@ -86,7 +85,6 @@
                             <span>{{'geral.cidade' | translate}}</span>
                         </div>
                         <select formControlName="cidade" class="form-control style-select">
-                            <option value="">{{'geral.selecioneACidade' | translate}}</option>
                             <option *ngFor="let cidade of cidades" [value]="cidade.id"
                                 [selected]="cidade.id === cidadeSelecionada">{{cidade.nome}}</option>
                         </select>
